@@ -1,3 +1,11 @@
+2001-05-14  Martin Blom  <martin@blom.org>
+
+	* Added a "ddk" target that generates include files for gcc, SAS/C
+	and Storm C.
+
+	* Added pads to the public structures, to make sure all fields are
+	aligned on their natural boundary.
+
 2001-05-10  Martin Blom  <martin@blom.org>
 
 	* Added functions to lock and unlock cards and devices.
